--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node backend/server.js",
-    "backend": "nodemon backend/server.js"
+    "start": "node server.js",
+    "backend": "nodemon server.js",
+    "frontend": "npm start --prefix frontend"
   },
   "author": "Donald Ntsibah",
   "license": "ISC",
